--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -18,6 +18,8 @@
     }
 
     span{
+       
+        color:black!important;
         display: block;
         align-self: center;
         flex:1;
@@ -25,5 +27,8 @@
         width:230px;
         font-size: 14px;
         font-weight: 500;
+        
     }
+
+
 }
