--- a/src/styles/themebutton.scss
+++ b/src/styles/themebutton.scss
@@ -1,7 +1,7 @@
 .slider {
     position: absolute;
     cursor: pointer;
-    top: 50px;
+    top: 30px;
     right: 100px;
     width:70px;
     background-color: hsl(0, 0%, 80%);
